<resources>
    <string name="app_name">weregunaremovethisoffthisescreen</string>
    <string name="textValue1">textValue1</string>
    <string name="tryAgainButton">Try Again</string>
    <string name="startGameButton">New Game</string>
    <string name="newGameButton">New Game</string>
    <string name="endGameButton">End Game</string>
    <string name="music_on_off">Music On/Off</string>
    <string name="musicToggleButton">Music</string>
    <string name="splashscreen">CS245 Project</string>
    <string name="home_screen_picture">home screen picture</string>
    <string name="mainMenuTitleText">Memory Game</string>

    <string name="highScoreButtonText">HighScores</string>
    <string name="high_score">HIGH SCORE</string>
    <string name="hiscore1">hiscore1</string>
    <string name="hiscore2">hiscore2</string>
    <string name="hiscore3">hiscore3</string>
    <string name="hiScoreBackButton">Menu</string>
    <string name="ofTilesText">Select Difficulty</string>
    <string name="LevelSelectorStartGameButton">Start Game</string>

    <string name="answer0">cat</string>
    <string name="answer1">dog</string>
    <string name="answer2">mouse</string>
    <string name="answer3">bunny</string>
    <string name="answer4">ferret</string>
    <string name="answer5">parrot</string>
    <string name="answer6">elephant</string>
    <string name="answer7">monkey</string>
    <string name="answer8">rhino</string>
    <string name="answer9">bear</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="score">SCORE :</string>
    <string name="_00">00</string>
    />
</resources>
