<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundtexture"
    tools:context="cpp.cs245final.MainActivity"
    tools:layout_editor_absoluteY="81dp">


    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="192dp" />

    <Button
        android:id="@+id/tryAgainButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tryAgainButton"
        app:layout_constraintBaseline_toBaselineOf="@+id/newGameButton"
        app:layout_constraintEnd_toStartOf="@+id/newGameButton"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/newGameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:text="@string/newGameButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/endGameButton"
        app:layout_constraintStart_toEndOf="@+id/tryAgainButton" />

    <Button
        android:id="@+id/endGameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/endGameButton"
        app:layout_constraintBaseline_toBaselineOf="@+id/newGameButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/newGameButton" />

    <ToggleButton
        android:id="@+id/musicToggle"
        android:layout_width="52dp"
        android:layout_height="35dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/musicToggleButton"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
